--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.5.3/dist/css/foundation.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
     <title>Pokemon</title>
@@ -14,27 +14,49 @@
       <h1 class="title">Pokedex!</h1>
     </header>
 
-    <div id="modal-container">
-      <div class="modal" id="modal-content">
-        <button class="close-button" id="modal-close-btn">Close</button>
-        <h1 class="title-name" id="modal-title"></h1>
-        <div class="modal-details-container row">
-          <div class="columns display">
-            <img src="" alt="" id="modal-image">
-          </div>
-          <div class="columns display">
-            <p class="height" id="modal-height"></p>
+    <div class="container">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <button type="button" class="close close-button" data-dismiss="modal" aria-label="Close" id="modal-close-btn">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="modal-header">
+                  <h1 class="modal-title title-name" id="modal-title"></h1>
+                </div>
+                <div class="modal-body">
+                  <div>
+                    <img src="" alt="" id="modal-image">
+                  </div>
+                  <div>
+                    <p class="height" id="modal-height"></p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+        <div class="col"></div>
       </div>
     </div>
-    <div class="container row align-center">
-      <ul class="pokemon-list" id="list"></ul>
+
+    <div class="container">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <div class="container row align-center">
+            <ul class="pokemon-list" id="list"></ul>
+          </div>
+        </div>
+        <div class="col"></div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script src="js/promise-polyfill.js"></script>
-    <script src="js/fetch.js"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
     <script src="js/scripts.js"></script>
   </body>
