list group work started

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="col"></div>
         <div class="col">
           <div class="container row align-center">
-            <ul class="pokemon-list" id="list"></ul>
+            <ul class="pokemon-list light-group" id="list" role="group"></ul>
           </div>
         </div>
         <div class="col"></div>
