CSS perfected, navigations added, accessibility taken care of

--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
 
   <body>
     <header class="head">
+      <nav class="navbar fixed-top navbar-expand-sm navbar-dark">
+        <a class="navbar-brand" href="#">
+          <img src="assets/Pokemon_logo.svg" width="150" height="70" alt="Pokemon logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="https://www.pokemon.com/us/">Main Site</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.pokemoncenter.com/" target="_blank">Shop</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
       <h1 class="title">Pokedex!</h1>
     </header>
 
@@ -59,5 +82,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/tota11y.min.js"></script>
   </body>
 </html>
