--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
-    <script src="js/scripts.min.js"></script>
+    <script src="dist/scripts.min.js"></script>
     <script src="js/tota11y.min.js"></script>
   </body>
 </html>
